# promtior-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
doc/: PROJECT_OVERVIEW.md
doc/diagrams/: Component-Diagram-Ingest.drawio  Component-Diagram-User-Flow.drawio
infra/terraform/: alb.tf  ecr.tf  ecs.tf  iam.tf  locals.tf  network.tf  outputs.tf  secrets.tf  variables.tf  versions.tf
src/promtior_rag/: __init__.py  config.py  logging_config.py
src/promtior_rag/api/: schemas.py  server.py
src/promtior_rag/api/static/: index.html
src/promtior_rag/chain/: language.py  prompts.py  rag_chain.py
src/promtior_rag/ingestion/: loaders.py  pipeline.py  splitter.py
src/promtior_rag/retrieval/: hybrid.py  reranker.py  vector_store.py
tests/: conftest.py  test_language.py  test_prompts.py  test_retrieval.py
